# localstack-aws-log-viewer

./: README.md  setup.cfg
aws_log_viewer/: extension.py  live.py  util.py  web.py
aws_log_viewer/static/: app.js  index.html
aws_request_inspector/: __init__.py  database.py  extension.py  util.py  web.py
aws_request_inspector/static/: app.js  index.html
