[metadata]
name = aws-request-inspector
version = 0.1.0
url = https://github.com/localstack/aws-request-inspector
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = Inspect AWS requests and responses that are made to LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.3
    Werkzeug<3.0
    jinja2

[options.entry_points]
localstack.extensions =
    aws-request-inspector = aws_request_inspector.extension:MyExtension
