[metadata]
name = localstack-aws-log-viewer
version = 0.1.0
url = https://github.com/thrau/localstack-aws-log-viewer
author = Thomas Rausch
summary = "LocalStack Extensions: LocalStack AWS Log Viewer"
author_email = thomas@localstack.cloud
description = Inspect AWS requests and responses that are made to LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=2.3
    Werkzeug
    jinja2

[options.entry_points]
localstack.extensions =
    aws-log-viewer = aws_log_viewer.extension:LogViewerExtension
